TEST_PROGRAMS/VALID/05/append.go
/* Append function */
package main

func main() {
	var slice [] int
	println(append(slice, 5))
}
