TEST_PROGRAMS/INVALID/04/85.go
package main

func foo() int {
    // Returns multiple values
    return 3, 3
}

func main() {
    foo()
}
